# Linux-Rice-Catalogue

./: .env  .env.development  .env.example  .env.production  .gitignore  LICENSE  README.md  doc.txt  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  sample-db.json  start.sh  vercel.json
api/: _middleware.js  admin-login.js  admin.js  auth.js  cleanup-unverified.js  deleteImage.js  deleteMyRice.js  deleteRice.js  forgot-password.js  getLeaderboard.js  getMyRices.js  getPendingRices.js  getRices.js  getUser.js  keywords.js  login.js  my-rices.js  oldscrapeReddit.js  proxy.js  reactRice.js  register.js  resend-verification.js  rices.js  scrapeReddit.js  serveImage.js  stats.js  submitRice.js  system.js  test-auth.js  updateMyRice.js  updateRice.js  updateStatus.js  upload.js  verify-email.js  (+2 more)
scripts/: add_date.js  add_date_to_formatted_rices.js  broken_git_screenshots.py  check_lengths_formatted_rice.py  cloudinary_img.py  curl_img_cloudinary.py  del_a_key.py  download_images_from_formatted_rice.py  download_readmes.py  extract_meta.py  fetcher.py  filter_equal_lengths.py  insert_to_mongo.py  inserted_ids.txt  link_to_img.py  list_files.py  migrate_images.py  migrate_keywords_to_mongo.py  migrate_to_imagekit.py  normalize_rice_fields.py  optimize_images.py  parse_awesome_rice.py  pyproject.toml  remove_dupes.py  scrape_github_images.py  scrape_reddit.py  seed-db.js  solve_sourcekey.py  temp_cloudinary.py  test_delete.py  test_imagekit_upload.py  uniq_element_mongo.py  update_fileids.py  update_meta.py  update_mongo_images.py  wait-for-db.js
(+58 files in other folders)
