[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "cloudinary>=1.44.1",
    "dotenv>=0.9.9",
    "pillow>=11.3.0",
    "praw>=7.8.1",
    "py-os>=1.0.0",
    "pymongo>=4.13.2",
    "requests>=2.32.4",
]
